--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "typescript": "^5.0.3"
   },
   "dependencies": {
-    "axios": "^1.3.6"
+    "axios": "^1.3.6",
+    "ts-node": "^10.9.1"
   }
 }
